--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
+  "arrowParens": "avoid",
   "semi": false,
   "singleQuote": true,
   "plugins": ["prettier-plugin-tailwindcss"]
