--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "date-fns": "^3.6.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
